# DumbDistributedLog

./: .pre-commit-config.yaml  AGENTS.md  API_CURRENT_STATE.md  Autoqueues-2025-12-24.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DISTRIBUTED_PLAN.md  FIRST_FLIGHT_HANDBOOK.md  IMPLEMENTATION_CHECKPOINTS.md  KISS_IMPLEMENTATION_PLAN.md  LEARNING_ROADMAP.md  PRD.md  QUEUE_MANAGER_IMPLEMENTATION.md  README.md  README_DISTRIBUTED.md  RISK_FACTOR_MITIGATION_REPORT.md  SPMC_MEMORY_SAFETY_FIX.md  TESTING.md  config-local.toml  config.toml  network_plan.md  run_benchmarks.sh  tarpaulin-report.html  test_client_api.sh  test_compile.sh
.deletion/: advanced_config.rs  advanced_node_health_config.rs  aimd.rs  basic_usage.rs  benchmark_readme.md  comprehensive_engine_demo.rs  comprehensive_example.rs  comprehensive_todos.md  config.rs  dead_code_analysis.md  disk_monitoring.rs  engine.rs  engine_demo.rs  engine_integration.rs  engine_trait_demo.rs  engine_trategic_vision.md  engine_usage_patterns.rs  enums.rs  expression_engine_demo.rs  expressions.rs  external_sensor.rs  financial_markets.rs  health_score_demo.rs  helper_methods_demo.rs  helper_tests.rs  iot_sensors.rs  modern_example.rs  node_health_config.rs  node_health_config_simple.rs  optimization_plan.md  performance.rs  performance_benchmarks.rs  pubsub_demo.rs  queue_as_engine.rs  queue_engine_integration.rs  queue_manager.rs  queue_manager_demo.rs  queue_trait.rs  real_system_monitoring.rs  server.rs  (+8 more)
.deletion/networking/: control_plane.rs  data_plane.rs  mod.rs  mod.rs.backup  networked_manager.rs  quinn_factory.rs  transport_traits.rs  transport_traits.rs.bak
benches/: benchmarks.rs  critical_fixes_bench.rs  ddl_benchmarks.rs
docs/: API.md  ARCHITECTURE.md  BENCHMARK_SOLUTION_SUMMARY.md  DISTRIBUTED_BENCHMARK.md  LIMITATIONS.md  USAGE.md  backpressure_implementation.md
examples/: 01_basic.rs  01_basic_usage.rs  EXAMPLE_STATUS_REPORT.md  advanced_expression_demo.rs  aggregation_demo.rs  aggregation_demo_broken.rs  batch_push_example.rs  comprehensive_lockfree_example.rs  config_demo.rs  config_test.rs  distributed_leader_example.rs  e2e_queue_test.rs  enhanced_networking_demo.rs  function_source_example.rs  gossip_example.rs  local_node.rs  lockfree_queue_example.rs  monitoring_dashboard.rs  performance_benchmarks.rs  persistence_demo.rs  queue_server_test.rs  quic_networking_demo.rs  simple_expression_demo.rs  simple_queue_test.rs  wal_demo.rs
libdocs/: disabled_components.md  expression_engine_comparison.md
scripts/: .gitignore  cluster-config.sh.template  cluster-functions.sh  cluster-utils.sh  deploy-cluster-remote.sh  jumpproxy-benchmark.sh  jumpproxy-start.sh  jumpproxy-status.sh  jumpproxy-stop.sh  jumpproxy-stress.sh  run-benchmark.sh  run-integration-tests.sh  start-cluster-remote.sh  start-cluster.sh  status-cluster-remote.sh  stop-cluster-remote.sh  stop-cluster.sh  test-tcp-bind.sh  test_examples.sh
src/: aimd.rs  autoqueues.rs  autoqueues_config.rs  benchmarks.rs  cluster.rs  config.rs  config_test.rs  constants.rs  core.rs  ddl.rs  ddl_distributed.rs  ddl_wal.rs  enums.rs  expression.rs  gossip.rs  gossip_protocol.rs  lib.rs  main.rs  metrics.rs  mod.rs  networking.rs  node.rs  port_config.rs  pubsub.rs  queue_manager.rs  server.rs  topic_queue.rs  traits.rs  types.rs  wal.rs
src/cluster/: cluster_var_client.rs  config.rs  gossip.rs  health_monitor.rs  leader.rs  leader_assignment.rs  leader_map_client.rs  leaderleader.rs  lock_utils.rs  membership.rs  mod.rs  node.rs  node_communicator.rs  ownership_machine.rs  raft_cluster.rs  raft_node.rs  raft_router.rs  storage.rs  tcp_network.rs  types.rs
src/expression/: evaluator.rs  mod.rs  parser.rs  types.rs
src/network/: hybrid.rs  mod.rs  raft_transport.rs  tcp.rs  tcp_network.rs  transport_traits.rs
src/networking/: mod.rs  quic.rs  transport_traits.rs  zmq_pubsub.rs
src/peer/: advertisement.rs  cache.rs  codec.rs  mod.rs  (+13 more)
tests/: atomic_queue_id_test.rs  chaos_tests.rs  concurrency_tests.rs  coverage_tests.rs  distributed_benchmark.rs  distributed_cluster_test.rs  distributed_test_utils.rs  e2e_test.rs  edge_cases.rs  function_source_test.rs  fuzz_tests.rs  inmemory_ddl_tests.rs  integration.rs  integration_tests.rs  lease_tests.rs  lock_recovery_tests.rs  membership_tests.rs  peer_codec_test.rs  peer_metrics_test.rs  persistence_test.rs  queue_tests.rs  raft_integration_tests.rs  raft_ownership_tests.rs  raft_persistence_tests.rs  stress_tests.rs  tcp_cluster_test.rs  tcp_network_tests.rs  topic_limit_test.rs  utils.ps
(+30 files in other folders)
