[package]
name = "autoqueues"
version = "0.1.0"
edition = "2024"
description = "AutoQueues - High-Performance Distributed Queue System with two clean APIs: Server Mode (Redis-like) and Programmatic Mode"
repository = "https://github.com/yourusername/autoqueues"
license = "MIT OR Apache-2.0"
keywords = ["queue", "distributed", "async", "metrics", "pubsub"]
categories = ["asynchronous", "data-structures", "network-programming"]

# Disable doctests due to system rustdoc issue
[lib]
doctest = false

[dependencies]
circular-buffer = "1.2"
tokio = { version = "1", features = ["full"] }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.37"
wincode = { version = "0.2" }
uuid = { version = "1", features = ["v4"] }
regex = "1.12"
toml = "0.9"
quinn = "0.11"
rustls = "0.23"
rcgen = "0.14"
# Additional dependencies for stratified networking
futures = "0.3"
socket2 = "0.6"
ordered-float = "5"
cron = "0.15"
chrono = { version = "0.4", features = ["serde"] }
zmq = "0.10.0"
async-trait = "0.1.89"
openraft = { version = "0.9.21", features = ["serde", "serde_json"] }
rand = "0.9.2"
evalexpr = { version = "13.1.0", features = ["regex", "serde"] }
dashmap = "6.0"

[dev-dependencies]
criterion = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
