[package]
name = "ddl"
version = "0.1.0"
edition = "2021"
description = "DDL - Dumb Distributed Log. A minimal distributed append-only log for HPC clusters."
license = "GPL"
keywords = ["queue", "log", "distributed", "hpc", "pubsub"]
categories = ["asynchronous", "data-structures", "network-programming"]

[lib]
doctest = false

[dependencies]
# Core dependencies
circular-buffer = "1.2"
tokio = { version = "1.50", features = ["net", "rt", "time", "signal", "sync", "macros", "rt-multi-thread"] }
thiserror = "2.0"
log = "0.4.29"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
binary_serde = "1.0.25"
toml = "1.1"

# Concurrency
dashmap = "6.1"
crossbeam = "0.8.4"

# Random and hashing
rand = "0.10"
blake3 = "1.8"

# Async traits
async-trait = "0.1.89"

# Tokio utilities
tokio-util = { version = "0.7.18", features = ["codec"] }

# Distributed consensus
openraft = "0.9.21"

# P2P/gossip networking
iroh-gossip = { version = "0.97", features = ["rpc"] }
iroh-base = "0.97"

# WAL (Write-Ahead Logging)
waly = "0.1.4"

# Network transport
zmq = "0.10"

# Tracing and observability
tracing = "0.1.44"

[dev-dependencies]
tempfile = "3.27"
criterion = { version = "0.8.2", features = ["async_tokio"] }
structopt = "0.3.26"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bench]]
name = "ddl_benchmarks"
harness = false
